# gh-board

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  FILTERS.md  KEYBINDINGS.md  README.md  SCROLL-CLAMPING.md  THEME.md  WORKFLOWS.md  build.rs  deny.toml  renovate.json  rumdl.toml
.cargo/: config.toml
.github/workflows/: _cargo-audit.yml  ci-compatibility-matrix.yml  ci-essentials.yml  essentials.yml  large-scope.yml  release.yml  schedule-renovate.yml  schedule-supply-chain.yml
ci/: test_full.sh
demo/: hero.tape  nav.tape  workflow-browse-review-prs.tape  workflow-checkout-pr.tape  workflow-manage-notifications.tape  workflow-monitor-cicd.tape  workflow-open-url.tape  workflow-triage-issues.tape  workflow-work-with-branches.tape  workflow-worktree-pr.tape
examples/: config-solarized-light.toml  config.toml
examples/themes/: ayu-dark.toml  base16-default.toml  catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  everforest.toml  gruvbox-dark.toml  iceberg.toml  kanagawa.toml  modus-operandi.toml  modus-vivendi.toml  monokai.toml  night-owl.toml  nightfox.toml  nord.toml  one-dark.toml  onehalf-dark.toml  palenight.toml  rose-pine.toml  solarized-16.toml  solarized-dark.toml  solarized-light.toml  srcery.toml  tokyo-night.toml  zenburn.toml
src/: app.rs  color.rs  filter.rs  git.rs  icons.rs  init.rs  lib.rs  main.rs  theme.rs  url.rs  util.rs
src/actions/: clipboard.rs  issue_actions.rs  local.rs  mod.rs  pr_actions.rs
src/components/: footer.rs  help_overlay.rs  markdown_view.rs  mod.rs  scrollbar.rs  selection_overlay.rs  sidebar.rs  sidebar_tabs.rs  tab_bar.rs  table.rs  text_input.rs
src/config/: builtin_themes.rs  keybindings.rs  loader.rs  mod.rs  show.rs  types.rs
src/engine/: github.rs  interface.rs  mod.rs  refresh.rs  stub.rs  watch.rs
src/github/: actions.rs  auth.rs  client.rs  graphql.rs  mod.rs  notifications.rs  rate_limit.rs  security.rs  types.rs
src/markdown/: mod.rs  renderer.rs  syntax.rs
src/types/: common.rs  issue.rs  mod.rs  notification.rs  pr.rs  security_alert.rs  workflow_run.rs
src/views/: actions.rs  alerts.rs  common.rs  issues.rs  mod.rs  notifications.rs  prs.rs  repo.rs
tests/: color_test.rs  config_test.rs  engine_stub_test.rs  keybinding_test.rs  sidebar_test.rs
tests/fixtures/: ansi_only_theme.toml  global_config.toml  invalid_toml.toml  local_override.toml  mixed_theme.toml  stub_prs.json  unknown_keys_config.toml
