[package]
name = "gh-board"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/graelo/gh-board"
description = "A blazingly fast terminal dashboard for GitHub pull requests, issues, and notifications"
keywords = ["github", "tui", "dashboard", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# TUI framework
iocraft = "0.7"
crossterm = "0.28"  # pinned by iocraft 0.7

# Async runtime (iocraft uses smol internally)
smol = "2"

# Syntax highlighting
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"

# Tree-sitter grammars
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-dockerfile = "0.2"

# GitHub API
octocrab = "0.49"
http = "1"
reqwest = { version = "0.12", features = ["json"] }

# Markdown
pulldown-cmark = "0.13"
unicode-width = "0.2"

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cache
moka = { version = "0.12", features = ["future"] }

# Async
async-compat = "0.2"
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
