[package]
name = "gh-board"
version = "0.3.0"
edition = "2024"
rust-version = "1.88.0"
description = "A blazingly fast terminal dashboard for GitHub pull requests, issues, and notifications"
repository = "https://github.com/graelo/gh-board"
license = "MIT"
keywords = ["cli", "dashboard", "github", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
#
# Date/time
chrono = { version = "0.4", features = ["serde"] }
#
# CLI
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"  # pinned by iocraft 0.7
#
# GitHub API
http = "1"
#
# TUI framework
iocraft = "0.7"
#
# Cache
moka = { version = "0.12", features = ["future"] }
octocrab = "0.49"
#
# Markdown
pulldown-cmark = "0.13"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
#
# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#
# Async runtime (iocraft uses smol internally)
smol = "2"
#
# Error handling
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1"
#
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#
# Syntax highlighting
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-dockerfile = "0.2"
tree-sitter-go = "0.25"
tree-sitter-highlight = "0.26"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
#
# Tree-sitter grammars
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
unicode-width = "0.2"

[profile.release]
strip = true
